The modal is now correctly wrapped in a back ground, focus in the first name field

--- a/style/main.css
+++ b/style/main.css
@@ -171,7 +171,6 @@ main {
     justify-content: space-between;
     align-items: center;
     padding: 2%;
-    width: 301px;
     height: 350px;
 }
 
