--- a/style/photographer.css
+++ b/style/photographer.css
@@ -1,9 +1,9 @@
 :root {
     --font-default: "DM Sans", Arial, Helvetica, sans-serif;
     --primary-font-color: #D3573C;
-    --second-font-color: #911c1c;
+    --second-font-color: rgb(145, 28, 28, 1);
     --third-font-color: #757575;
-    --primary-bg-color: #DB8876;
+    --primary-bg-color: rgb(219, 136, 118, 1);
     --primary-border-color: #C4C4C4;
 }
 
@@ -198,6 +198,7 @@ main {
 
 .media-text-wrapper {
     display: flex;
+    position: relative;
     padding: 5px 0;
     color: var(--second-font-color);
     width: 100%;
@@ -230,9 +231,13 @@ main {
 
 .like-input {
     position: absolute;
-    top: 0;
+    top: 40%;
     left: -999999px;
     opacity: 0;
+}
+
+.like-input:focus + .heart-label > .heart-svg {
+    stroke-width: 40;
 }
 
 .heart-label {
@@ -288,25 +293,33 @@ main {
 
 /* contact modal*/
 
-.form-wrapper {
+.dial-bg, .light-bg {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    background:rgba(255, 252, 252, 0.4);
+    width: 100%;
+    height: 100%;
     position: fixed;
     z-index: 2;
-    top: calc(50% - 50vh);
+    top: 0;
     left: 0;
+}
+
+.dial-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     background: var( --primary-bg-color);
     padding-top: 30px;
     padding-bottom: 75px;
     border-radius: 5px;
-    opacity: 1;
-    transform: scaleX(1);
-    transition: all 200ms ease-out;
+    border-style: none;
 }
 
-.form-wrapper.not-visible {
+.dial-bg.not-visible, .light-bg.not-visible {
     opacity: 0;
     transform: scaleX(0);
 }
@@ -407,12 +420,10 @@ main {
 
 /* light Box*/
 
+
 .light-box {
     display: flex;
-    position: fixed;
     width: 400px;
-    top: calc(50% - 171px);
-    left: calc(50% - 200px);
 }
 
 .prev-button, .next-button {
@@ -436,7 +447,7 @@ main {
     border-bottom: 3px solid var(--second-font-color);
     position:absolute;
     transform: rotate(135deg);
-    left:2px;
+    left:35%;
     top:calc(50% - 5px);
     z-index:3;
 }
@@ -449,7 +460,7 @@ main {
     border-bottom: 3px solid var(--second-font-color);
     position:absolute;
     transform: rotate(-45deg);
-    right:22px;
+    right: 36%;
     top:calc(50% - 5px);
     z-index:3;
 }
@@ -486,14 +497,20 @@ main {
 
     /* modal form*/
 
-    .form-wrapper {
-        top: calc(50% - 380px);
+    .dial-wrapper {
+        top: calc(50% - 47vh);
         left: calc(50% - 334.5px);
         max-width: 669px;
+        padding-bottom: 45px;
+    }
+
+    .form-header {
+        margin-bottom: 20px;
     }
 
     .form-title {
         font-size: 4em;
+        width: 90%;
     }
 
     .form-close {
@@ -531,6 +548,7 @@ main {
         display:flex;
         flex-direction: column;
         position:relative;
+        cursor: pointer;
         background: var(--second-font-color);
         border-radius: 5px;
         padding: 6px 10px;
